--- a/clusters/training/dev/nginx.yaml
+++ b/clusters/training/dev/nginx.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nginx
-  namespace: dev
+  namespace: default
   labels:
     app: nginx
 spec:
@@ -16,7 +16,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx
-  namespace: dev
+  namespace: default
   labels:
     app: nginx
 spec:
