--- a/clusters/training/namespaces/kustomizationl.yaml
+++ b/clusters/training/namespaces/kustomizationl.yaml
@@ -1,6 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: dev
 resources:
-- apache.yaml
-- nginx.yaml
+- dev-namespace.yaml
+- qa0-namespace.yaml
