--- a/clusters/training/flus-system-automation/kustomization.yaml
+++ b/clusters/training/flus-system-automation/kustomization.yaml
@@ -2,4 +2,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - automation.yaml
-- sample-app.yaml
+# - sample-app.yaml
